maj test ajout projet + correction z-index projet

--- a/src/styles/components/projets.scss
+++ b/src/styles/components/projets.scss
@@ -65,6 +65,7 @@ section {
       text-align: center;
       height: 250px;
       cursor: pointer;
+      z-index: 1;
 
       .card-content {
         margin: 0;
